# airio

./: Cargo.toml  README.md
airio/: Cargo.toml
airio-core/: Cargo.toml
airio-core/src/: connection.rs  either.rs  lib.rs  muxing.rs  transport.rs  upgrade.rs  utils.rs
airio-core/src/muxing/: boxed.rs
airio-core/src/transport/: and_then.rs  boxed.rs  map.rs  map_err.rs  upgrade.rs
airio-core/src/upgrade/: apply.rs  either.rs  error.rs  pending.rs  ready.rs  select.rs
airio-identify/: Cargo.toml
airio-identify/src/: lib.rs
airio-stream-select/: Cargo.toml
airio-stream-select/src/: dialer_select.rs  lib.rs  listener.rs  negotiated.rs
airio/src/: lib.rs
examples/tcp-echo/: Cargo.toml
examples/tcp-echo/src/: client.rs  main.rs
examples/ws-echo/: Cargo.toml
examples/ws-echo/src/: client.rs  main.rs
muxers/airio-muxing/: Cargo.toml
muxers/airio-muxing/src/: lib.rs
muxers/airio-yamux/: Cargo.toml
muxers/airio-yamux/src/: lib.rs
transports/airio-quic/: Cargo.toml
transports/airio-quic/src/: connection.rs  error.rs  lib.rs  stream.rs
transports/airio-tcp/: Cargo.toml
transports/airio-tcp/src/: lib.rs  listener.rs
transports/airio-ws/: Cargo.toml
transports/airio-ws/src/: lib.rs
