[package]
name = "airio-muxing"
version = "0.2.0"
rust-version.workspace = true
edition.workspace = true
description = "Muxing multiplexing protocol for airio"
authors = ["Cariers Kim <cariers.kim@gmail.com>"]
license = "MIT"
repository = "https://github.com/cariers/airio"
keywords = ["airio", "networking"]
categories = ["network-programming", "asynchronous"]


[dependencies]
futures = { workspace = true }
muxing = { version = "0.2.0" }
airio-core.workspace = true
tracing.workspace = true