[package]
name = "airio-quic"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
quinn = { version = "0.11.8", default-features = false, features = ["rustls", "runtime-tokio", "futures-io"] }
tokio = {workspace = true}
airio-core.workspace = true
futures.workspace = true
bytes.workspace = true
tracing.workspace = true
socket2 = "0.5.10"
futures-timer = "3.0.3"
thiserror.workspace = true
x509-parser = "0.17.0"
sha2 = "0.10.9"
