[package]
name = "airio-tcp"
version = "0.2.0"
rust-version.workspace = true
edition.workspace = true
description = "TCP transport for airio"
authors = ["Cariers Kim <cariers.kim@gmail.com>"]
license = "MIT"
repository = "https://github.com/cariers/airio"
keywords = ["airio", "networking"]
categories = ["network-programming", "asynchronous"]



[dependencies]
tokio = {workspace = true, features = ["net"]}
airio-core.workspace = true
futures.workspace = true
socket2 = "0.5.10"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "rt", "macros"]}
